feat: day 5 - clean code